--- a/src/AgentNet/AgentNet.fsproj
+++ b/src/AgentNet/AgentNet.fsproj
@@ -1,12 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net10.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="Tool.fs" />
+    <Compile Include="Agent.fs" />
+    <Compile Include="SemanticKernel.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.68.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.68.0" />
   </ItemGroup>
 
 </Project>
