Initial impl. of ResultWorkflow.fs

--- a/src/AgentNet/AgentNet.fsproj
+++ b/src/AgentNet/AgentNet.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Tool.fs" />
     <Compile Include="Agent.fs" />
     <Compile Include="Workflow.fs" />
+    <Compile Include="ResultWorkflow.fs" />
     <Compile Include="AgentFramework.fs" />
   </ItemGroup>
 
