--- a/src/AgentNet.Tests/AgentNet.Tests.fsproj
+++ b/src/AgentNet.Tests/AgentNet.Tests.fsproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <Compile Include="Stubs\StubChatClient.fs" />
     <Compile Include="SequentialWorkflowTests.fs" />
+    <Compile Include="RoutingWorkflowTests.fs" />
+    <Compile Include="ParallelWorkflowTests.fs" />
+    <Compile Include="ResilienceWorkflowTests.fs" />
+    <Compile Include="ResultWorkflowTests.fs" />
+    <Compile Include="CompositionWorkflowTests.fs" />
   </ItemGroup>
 
   <ItemGroup>
