Reworked `Tool.create` to use quotations: `<@ toolFn @>`

--- a/src/AgentNet.Tests/AgentNet.Tests.fsproj
+++ b/src/AgentNet.Tests/AgentNet.Tests.fsproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="Stubs\StubChatClient.fs" />
+    <Compile Include="ToolTests.fs" />
     <Compile Include="SequentialWorkflowTests.fs" />
     <Compile Include="RoutingWorkflowTests.fs" />
     <Compile Include="ParallelWorkflowTests.fs" />
