--- a/src/StockAdvisorCS/StockAdvisorCS.csproj
+++ b/src/StockAdvisorCS/StockAdvisorCS.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.*" />
     <PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.*" />
+    <PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.*" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="10.*-preview.*" />
     <PackageReference Include="Azure.AI.OpenAI" Version="2.*" />
     <PackageReference Include="Azure.Identity" Version="1.13.*" />
