--- a/src/AgentNet.Durable/AgentNet.Durable.fsproj
+++ b/src/AgentNet.Durable/AgentNet.Durable.fsproj
@@ -25,11 +25,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AgentNet\AgentNet.fsproj" />
-    <ProjectReference Include="..\AgentNet.Durable.Interop\AgentNet.Durable.Interop.csproj" />
   </ItemGroup>
 
+  <!-- Future: Add Microsoft.Agents.AI.DurableTask when implementing awaitEvent -->
+  <!--
   <ItemGroup>
-    <PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.*" />
+    <PackageReference Include="Microsoft.Agents.AI.DurableTask" Version="1.0.0-preview.*" />
   </ItemGroup>
+  -->
 
 </Project>
