--- a/src/AgentNet/AgentNet.fsproj
+++ b/src/AgentNet/AgentNet.fsproj
@@ -37,7 +37,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.*" />
+    <PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.*" />
     <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="10.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AgentNet.Interop\AgentNet.Interop.csproj" />
   </ItemGroup>
 
 </Project>
