--- a/src/AgentNet.Tests/AgentNet.Tests.fsproj
+++ b/src/AgentNet.Tests/AgentNet.Tests.fsproj
@@ -15,6 +15,8 @@
     <Compile Include="RoutingWorkflowTests.fs" />
     <Compile Include="ParallelWorkflowTests.fs" />
     <Compile Include="ResultWorkflowTests.fs" />
+    <Compile Include="ResilienceWorkflowTests.fs" />
+    <Compile Include="DurableWorkflowTests.fs" />
     <Compile Include="CompositionWorkflowTests.fs" />
   </ItemGroup>
 
@@ -28,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AgentNet\AgentNet.fsproj" />
+    <ProjectReference Include="..\AgentNet.Durable\AgentNet.Durable.fsproj" />
   </ItemGroup>
 
 </Project>
