--- a/src/Samples.DurableFunctions/Samples.DurableFunctions.fsproj
+++ b/src/Samples.DurableFunctions/Samples.DurableFunctions.fsproj
@@ -33,6 +33,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+    <None Include="test-requests.http" />
   </ItemGroup>
 
 </Project>
