--- a/src/AgentNet.Durable/AgentNet.Durable.fsproj
+++ b/src/AgentNet.Durable/AgentNet.Durable.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -9,7 +9,7 @@
   <!-- NuGet Package Metadata -->
   <PropertyGroup>
     <PackageId>AgentNet.Durable</PackageId>
-    <Version>1.0.0-alpha.2</Version>
+    <Version>1.0.0-alpha.2.1</Version>
     <Authors>Jordan Marr</Authors>
     <Description>Durable workflow compilation for AgentNet. Compiles F# workflow definitions to Microsoft Azure Durable Functions (MAF) format for production deployment.</Description>
     <PackageTags>fsharp;ai;agents;durable;azure-functions;workflows;maf</PackageTags>
